Replaced MTRandom with modern RandomGenerator
MT19937 provides no real-world benefit over Java's default generators in this application. ThreadLocalRandom from Java 7 and the new RandomGenerators from Java 17 are both proven and faster than MTRandom.
Selected generator based on Oracle's recommendation: https://docs.oracle.com/en/java/javase/22/core/choosing-prng-algorithm.html#GUID-6946463F-C64B-4361-AB53-0D52FB279DE0__GUID-4C6F8ADB-4057-4ADC-9D46-17F1FC947DCE